Gather expected replica count during validDocIds metadata read
Move the per-segment expected replica count into
ServerSegmentMetadataReader.getSegmentToValidDocIdsMetadataFromServer,
which already iterates the server-to-segments assignment, and return it
alongside the metadata via ValidDocIdsMetadataResult. This removes the
separate MinionTaskUtils.getSegmentToReplicaCount pass over the same map.

Also drop SegmentRefreshTask from the consensus/validation-mode constant
docs (StarTree-only) and use StringUtils.isBlank in the mode parsers.